Remove clients shutdown in query tests